# VoxFlow

./: .gitignore  BUILD_EXE.bat  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_PORTABLE.bat  INSTALL_MAC.md  INSTALL_WINDOWS.md  LICENSE  README.md  SECURITY.md  START_VOXFLOW.bat  VOXFLOW.lnk  VoxFlow.spec  install.bat  install_mac.sh  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
voxflow/: __init__.py  __main__.py  app.py  audio_ducker.py  auto_typer.py  autostart.py  config.py  create_shortcut.py  hotkey_manager.py  icon_gen.py  main.py  overlay.py  post_processor.py  recorder.py  sounds.py  transcriber.py  tray.py
